--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,15 +10,21 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $projectDir: '%kernel.project_dir%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
+    Application\:
+        resource: '../src/Application'
+
+    Infrastructure\:
+        resource: '../src/Infrastructure'
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+            - '../src/Infrastructure/Shared/Symfony/kernel.php'
+
+    Domain\:
+        resource: '../src/Domain'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
