--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,9 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
+    Fixtures\:
+        resource: '../fixtures'
+
     Application\:
         resource: '../src/Application'
 
